Fix NPE in map creation